# women-in-mathematics

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/women_in_mathematics/: __init__.py
src/women_in_mathematics/defs/: resources.py
src/women_in_mathematics/defs/extract/src/: extract_assets.py
src/women_in_mathematics/defs/join/output/: degrees.csv  employment.csv  honors.csv  parents.csv  personal.csv  visits.csv
src/women_in_mathematics/defs/join/src/: join_assets.py
src/women_in_mathematics/defs/parse/src/: parse_assets.py
src/women_in_mathematics/defs/split/src/: split_assets.py
